// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils test suite getSite test suite should return SuperOffice site 1`] = `
{
  "baseId": "superoffice",
  "displayPoweredBySesam": true,
  "id": "superoffice",
  "isBrandLogo": true,
  "loginSubTitle": "Log in to SuperOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/superoffice/superoffice-ulp-header-logo.svg",
  "name": "",
  "signupSubTitle": "Sign up to SuperOffice DataSync.",
  "titleClassName": "superofficeLogInTitle",
}
`;

exports[`utils test suite getSite test suite should return SuperOffice-test site 1`] = `
{
  "baseId": "superoffice",
  "displayPoweredBySesam": true,
  "id": "superoffice-test",
  "isBrandLogo": true,
  "loginSubTitle": "Log in to SuperOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/superoffice/superoffice-ulp-header-logo.svg",
  "name": "",
  "signupSubTitle": "Sign up to SuperOffice DataSync.",
  "titleClassName": "superofficeLogInTitle",
}
`;

exports[`utils test suite getSite test suite should return Wave site 1`] = `
{
  "displayPoweredBySesam": false,
  "id": "wave",
  "isBrandLogo": true,
  "loginSubTitle": "Log in to Making Wave Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/wave/making-wave-talk-logo-centered.svg",
  "name": "Wave",
  "signupSubTitle": "Sign up to Making Wave Talk.",
}
`;

exports[`utils test suite getSite test suite should return default site 1`] = `
{
  "displayPoweredBySesam": true,
  "id": "sesam",
  "loginSubTitle": "Log in to Sesam Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/sesam/sesam-talk-rgb.png",
  "name": "Sesam",
  "signupSubTitle": "Sign up to Sesam Talk to continue to Sesam Talk.",
}
`;

exports[`utils test suite getSite test suite should return powerofficego site 1`] = `
{
  "baseId": "powerofficego",
  "displayPoweredBySesam": false,
  "html": "powerofficego-logo.html",
  "id": "powerofficego",
  "loginSubTitle": "Log in to PowerOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/poweroffice/poweroffice-new-logo.png",
  "name": "PowerOffice",
  "signupSubTitle": "Sign up to PowerOffice DataSync.",
}
`;

exports[`utils test suite getSite test suite should return powerofficego-test site 1`] = `
{
  "baseId": "powerofficego",
  "displayPoweredBySesam": false,
  "html": "powerofficego-logo.html",
  "id": "powerofficego-test",
  "loginSubTitle": "Log in to PowerOffice DataSync.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/poweroffice/poweroffice-new-logo.png",
  "name": "PowerOffice",
  "signupSubTitle": "Sign up to PowerOffice DataSync.",
}
`;

exports[`utils test suite getSite test suite should return sesam site 1`] = `
{
  "displayPoweredBySesam": true,
  "id": "sesam",
  "loginSubTitle": "Log in to Sesam Talk.",
  "logoUrl": "https://cdn.jsdelivr.net/gh/sesam-io/wix-sso@v1.0.127-site-logos/src/packages/siteLogos/sesam/sesam-talk-rgb.png",
  "name": "Sesam",
  "signupSubTitle": "Sign up to Sesam Talk to continue to Sesam Talk.",
}
`;
